--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/.env
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+
+/src/utils
+/package-lock.json
 
 # testing
 /coverage
